[package]
name = "ants_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# enable LTO (Link-Time-Optimization) in release mode.
[profile.release]
lto = "thin"

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
rand = "0.7.3"
crossbeam = "0.8"
clap = "3.0.10"
noise = "0.7.0"
rustyline = "9.1.2"