[package]
name = "ants_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# enable LTO (Link-Time-Optimization) in release mode.
[profile.release]
lto = "thin"

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
rand = "0.8.4"
crossbeam = "0.8"
clap = "3.0.10"
noise = "0.7.0"
rustyline = "9.1.2"
rand_chacha = "0.3.1"
bevy_ecs_tilemap = "0.5.0"
# bevy_rapier2d = { version = "0.12.0", features = ["render"]}
bevy_rapier2d = {path = "../bevy_rapier/bevy_rapier2d", features = ["render"]}